logs/turk.log
Listing '.'...
Listing './bin'...
Compiling './bin/miniterm.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Automat-0.6.0.dist-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/Turk-0.1.1.egg-info'...
Listing './lib/python3.5/site-packages/Twisted-17.9.0.egg-info'...
Listing './lib/python3.5/site-packages/attr'...
Listing './lib/python3.5/site-packages/attrs-17.4.0.dist-info'...
Listing './lib/python3.5/site-packages/automat'...
Listing './lib/python3.5/site-packages/automat/_test'...
Listing './lib/python3.5/site-packages/constantly'...
Listing './lib/python3.5/site-packages/constantly-15.1.0.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/exampleproj'...
Listing './lib/python3.5/site-packages/hyperlink'...
Listing './lib/python3.5/site-packages/hyperlink/test'...
Listing './lib/python3.5/site-packages/hyperlink-17.3.1.dist-info'...
Listing './lib/python3.5/site-packages/incremental'...
Listing './lib/python3.5/site-packages/incremental/tests'...
Listing './lib/python3.5/site-packages/incremental-17.5.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyserial-3.4.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/serial'...
Listing './lib/python3.5/site-packages/serial/threaded'...
Listing './lib/python3.5/site-packages/serial/tools'...
Listing './lib/python3.5/site-packages/serial/urlhandler'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/turk'...
Compiling './lib/python3.5/site-packages/turk/__init__.py'...
***   File "./lib/python3.5/site-packages/turk/__init__.py", line 63
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/turk/runtime'...
Compiling './lib/python3.5/site-packages/turk/runtime/bridge.py'...
***   File "./lib/python3.5/site-packages/turk/runtime/bridge.py", line 92
    except urllib2.HTTPError, e:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/turk/runtime/spawner.py'...
***   File "./lib/python3.5/site-packages/turk/runtime/spawner.py", line 57
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/turk/turkctl.py'...
***   File "./lib/python3.5/site-packages/turk/turkctl.py", line 25
    print 'File "%s" exists - Is Turk Core already running?' % pidfile_path
                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/turk/utils'...
Compiling './lib/python3.5/site-packages/turk/utils/signal.py'...
***   File "./lib/python3.5/site-packages/turk/utils/signal.py", line 14
    print 'initializing SignalEmitter'
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/turk/xbeed'...
Compiling './lib/python3.5/site-packages/turk/xbeed/testing.py'...
***   File "./lib/python3.5/site-packages/turk/xbeed/testing.py", line 19
    print 'checksum test'
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/turk/xbeed/xbeed.py'...
***   File "./lib/python3.5/site-packages/turk/xbeed/xbeed.py", line 68
    except ChecksumFail, e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/twisted'...
Listing './lib/python3.5/site-packages/twisted/_threads'...
Listing './lib/python3.5/site-packages/twisted/_threads/test'...
Listing './lib/python3.5/site-packages/twisted/application'...
Listing './lib/python3.5/site-packages/twisted/application/runner'...
Listing './lib/python3.5/site-packages/twisted/application/runner/test'...
Listing './lib/python3.5/site-packages/twisted/application/test'...
Listing './lib/python3.5/site-packages/twisted/application/twist'...
Listing './lib/python3.5/site-packages/twisted/application/twist/test'...
Listing './lib/python3.5/site-packages/twisted/conch'...
Listing './lib/python3.5/site-packages/twisted/conch/client'...
Listing './lib/python3.5/site-packages/twisted/conch/insults'...
Listing './lib/python3.5/site-packages/twisted/conch/openssh_compat'...
Listing './lib/python3.5/site-packages/twisted/conch/scripts'...
Listing './lib/python3.5/site-packages/twisted/conch/ssh'...
Listing './lib/python3.5/site-packages/twisted/conch/test'...
Listing './lib/python3.5/site-packages/twisted/conch/ui'...
Listing './lib/python3.5/site-packages/twisted/cred'...
Listing './lib/python3.5/site-packages/twisted/cred/test'...
Listing './lib/python3.5/site-packages/twisted/enterprise'...
Listing './lib/python3.5/site-packages/twisted/internet'...
Listing './lib/python3.5/site-packages/twisted/internet/iocpreactor'...
Listing './lib/python3.5/site-packages/twisted/internet/iocpreactor/iocpsupport'...
Listing './lib/python3.5/site-packages/twisted/internet/test'...
Listing './lib/python3.5/site-packages/twisted/internet/test/fake_CAs'...
Listing './lib/python3.5/site-packages/twisted/logger'...
Listing './lib/python3.5/site-packages/twisted/logger/test'...
Listing './lib/python3.5/site-packages/twisted/mail'...
Listing './lib/python3.5/site-packages/twisted/mail/test'...
Listing './lib/python3.5/site-packages/twisted/names'...
Listing './lib/python3.5/site-packages/twisted/names/test'...
Listing './lib/python3.5/site-packages/twisted/pair'...
Listing './lib/python3.5/site-packages/twisted/pair/test'...
Listing './lib/python3.5/site-packages/twisted/persisted'...
Listing './lib/python3.5/site-packages/twisted/persisted/test'...
Listing './lib/python3.5/site-packages/twisted/plugins'...
Listing './lib/python3.5/site-packages/twisted/positioning'...
Listing './lib/python3.5/site-packages/twisted/positioning/test'...
Listing './lib/python3.5/site-packages/twisted/protocols'...
Listing './lib/python3.5/site-packages/twisted/protocols/haproxy'...
Listing './lib/python3.5/site-packages/twisted/protocols/haproxy/test'...
Listing './lib/python3.5/site-packages/twisted/protocols/test'...
Listing './lib/python3.5/site-packages/twisted/python'...
Listing './lib/python3.5/site-packages/twisted/python/_pydoctortemplates'...
Listing './lib/python3.5/site-packages/twisted/python/test'...
Listing './lib/python3.5/site-packages/twisted/runner'...
Listing './lib/python3.5/site-packages/twisted/runner/test'...
Listing './lib/python3.5/site-packages/twisted/scripts'...
Listing './lib/python3.5/site-packages/twisted/scripts/test'...
Listing './lib/python3.5/site-packages/twisted/spread'...
Listing './lib/python3.5/site-packages/twisted/spread/test'...
Listing './lib/python3.5/site-packages/twisted/tap'...
Listing './lib/python3.5/site-packages/twisted/test'...
Listing './lib/python3.5/site-packages/twisted/trial'...
Listing './lib/python3.5/site-packages/twisted/trial/_dist'...
Listing './lib/python3.5/site-packages/twisted/trial/_dist/test'...
Listing './lib/python3.5/site-packages/twisted/trial/test'...
Listing './lib/python3.5/site-packages/twisted/web'...
Listing './lib/python3.5/site-packages/twisted/web/_auth'...
Listing './lib/python3.5/site-packages/twisted/web/test'...
Listing './lib/python3.5/site-packages/twisted/words'...
Listing './lib/python3.5/site-packages/twisted/words/im'...
Listing './lib/python3.5/site-packages/twisted/words/protocols'...
Listing './lib/python3.5/site-packages/twisted/words/protocols/jabber'...
Listing './lib/python3.5/site-packages/twisted/words/test'...
Listing './lib/python3.5/site-packages/twisted/words/xish'...
Listing './lib/python3.5/site-packages/wokkel'...
Compiling './lib/python3.5/site-packages/wokkel/server.py'...
***   File "./lib/python3.5/site-packages/wokkel/server.py", line 80
    except error.StreamError, exc:
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/wokkel/test'...
Listing './lib/python3.5/site-packages/wokkel-0.7.1.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
